# escooter-monitoring

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/: dependabot.yml
client/: Cargo.toml  README.md  martinete.toml
client/src/: config.rs  connection.rs  consts.rs  gps_location.rs  lib.rs  main.rs  mqtt_data.rs  telemetry.rs
raspberry/: README.md  escooter-monitoring.service
raspberry/relay_mqtt_client/: relay.py  relay.service  relay.toml  relay_config.toml  requirements.txt
raspberry/scripts/: README.md  install.sh  lte.sh
raspberry/scripts/lte/: guide.md  lte.sh
server/: README.md  queries.sql  server-compose.yaml
server/ansible/: README.md  inventory  playbook.yaml
server/ansible/tasks/: server.yaml  users.yaml
server/ansible/vars/: vars.yaml
server/api/: Dockerfile  README.md  config.toml  requirements.txt
server/api/app/: config.py  database.py  main.py  models.py  schemas.py
server/api/bruno-test/MartineteAPI_Test/: bruno.json
server/api/bruno-test/MartineteAPI_Test/battery_info/: get_battery_with_dates.bru  get_battery_with_desc_order.bru  get_battery_with_end_date.bru  get_battery_with_start_date.bru  get_battery_without_dates.bru
server/api/bruno-test/MartineteAPI_Test/environments/: parameters.bru
server/api/bruno-test/MartineteAPI_Test/general_info/: get_general_with_dates.bru  get_general_with_dates_invalid.bru  get_general_with_desc_order.bru  get_general_with_end_date.bru  get_general_with_start_date.bru  get_general_without_dates.bru
server/api/bruno-test/MartineteAPI_Test/get_relay_status/: get_status.bru
server/api/bruno-test/MartineteAPI_Test/global_info/: get_global.bru  get_global_with_dates.bru  get_global_with_dates_invalid.bru  get_global_with_desc_order.bru  get_global_with_end_date.bru  get_global_with_start_date.bru  get_global_without_dates.bru
server/api/bruno-test/MartineteAPI_Test/location_info/: get_location_with_dates.bru  get_location_with_desc_order.bru  get_location_with_end_date.bru  get_location_with_start_date.bru  get_location_without_dates.bru
server/api/bruno-test/MartineteAPI_Test/set_power/: close_relay.bru  error_relay.bru  open_relay.bru
server/broker/: mosquitto.conf
server/grafana/: README.md  grafana.env  grafana.ini
server/grafana/dashboards/: default.yaml  martinete_08.json  scooter_dashboard.json
server/grafana/datasources/: datasource.yaml
server/mqtt-postgresql-bridge/: Dockerfile  README.md  bridge.py  config.toml  requirements.txt
server/timescaledb/: README.md  before-init-db.sh  db.env  init-db.sql  run-after-init-db.sh
src/: config.rs  connection.rs  gps_location.rs  lib.rs  login.rs  main.rs  mi_crypto.rs  mqtt_data.rs  protocol.rs  scanner.rs  telemetry.rs
src/session/: battery.rs  commands.rs  info.rs  settings.rs
tests/: gps_test.rs
