cargo-features = ["edition2024"]

[package]
name = "m365"
version = "1.0.0"
edition = "2024"
license-file = "LICENSE.md"
description = "A lightweight rust client to monitor Xiaomi scooters using BLE, 4G and GPS"
keywords = ["m365", "xiaomi", "electric-scooter", "bluetooth", "ble","iot","gps","raspberry-pi"]
repository = "https://github.com/martinge17/escooter-monitoring"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

chrono = "0.4.38"
serde_json = "1.0.117"
paho-mqtt = "0.12.5" # Send data to server
serialport = { version = "4.4.0", default-features = false } # Connect to GPS # Disable default features (udev) as we don´t need to list ports
toml = "0.8.15" # Used to parse TOML Config file
btleplug = { version = "0.11.5", features = ["serde"] } # Connect to scooter

serde = { version = "1.0.136", features = ["derive"] }
p256 = { version = "0.10.1", features = ["ecdsa", "ecdh"] }
rand_core = "0.6.3"
elliptic-curve = "0.11.9"
ccm = "0.4.4"

aes = { version = "0.7", features = ["force-soft"] }
hkdf = "0.12.0"
sha2 = "0.10.1"
hex-literal = "0.3.4"
hmac = "0.12.1"

pretty-hex = "0.2.1"
tokio = { version = "1.38.0", features = ["full"] }

futures-util = "0.3.19"
futures = "0.3.19"
tokio-stream = "0.1.8"
uuid = { version = "1.7.0", features = ["v4"] }

anyhow = "1.0.53"
thiserror = "1.0.30"
tracing = "0.1.40"
regex = "1.10.5"
lazy_static = "1.5.0"
tracing-subscriber = { version = "0.3.18", features = ["tracing-log"] }

[[example]]
name = "scanner"